# QUASAR

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  bridge.py  bridge_history.py  pyproject.toml  quasar_launcher.py  requirements.txt
.github/workflows/: publish.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: app.tsx  cli.tsx
cli/src/commands/: Checkpoint.tsx  Config.tsx  HeadlessRun.ts  History.tsx  Info.tsx  Run.tsx
cli/src/handlers/: checkpointHandler.ts  index.ts  messageHandlers.ts
cli/src/hooks/: index.ts  types.ts  useBridge.ts  useInputHandler.ts
cli/src/ui/: AgentTree.tsx  Banner.tsx  CodeSnippetPanel.tsx  ExecutionPlanPanel.tsx  PromptInput.tsx  animationTick.ts
cli/src/ui/Run/: ActiveAgentStatus.tsx  DotsSpinner.tsx  RagStatus.tsx  StaticItemRenderer.tsx  TriangleSpinner.tsx  index.ts
cli/src/ui/Run/renderers/: PanelRenderers.tsx  StatusRenderers.tsx  index.ts  lineRenderer.tsx
cli/src/utils/: constants.ts  formatting.ts  helpers.ts  index.ts  planParsing.ts  pythonHighlighter.ts  stateHelpers.ts  textParsing.tsx
docker/: Dockerfile.amd64  Dockerfile.arm64  Dockerfile.cuda  Dockerfile.rocm
scripts/: build_frontend.sh
src/: __init__.py  agents.py  checkpoint.py  debug_logger.py  graph.py  llm_config.py  pending_execution.py  results.py  revert.py  runner.py  state.py  usage_tracker.py
src/agents/: __init__.py  evaluator.py  operator.py  strategist.py
src/agents/utils/: __init__.py  bridge.py  errors.py  logging.py  streaming.py  system.py  text.py  tool_helpers.py
src/rag/: __init__.py  docs_downloader.py  embeddings.py  index_downloader.py  query.py  vectorstore.py
src/tools/: __init__.py  base.py  execution.py  execution_check.py  filesystem.py  rag_tools.py  termination.py  web.py
tests/: conftest.py  test_audit_execution.py  test_audit_execution_extra.py  test_audit_revert.py  test_audit_revert_extra.py  test_base_tools.py  test_checkpoint.py  test_execution_interrupt.py  test_execution_tools.py  test_filesystem_tools.py  test_graph_routing.py  test_llm_config.py  test_pending_execution.py  test_resource_usage.py  test_revert.py  test_state.py  test_web_tools.py
